Migration vers Net 7

--- a/src/Client/Shared/Components/AddEditExtendedAttributeModal.razor
+++ b/src/Client/Shared/Components/AddEditExtendedAttributeModal.razor
@@ -6,7 +6,7 @@
 @typeparam TEntity
 @typeparam TExtendedAttribute
 
-<EditForm Model="@AddEditExtendedAttributeModel" OnValidSubmit="SaveAsync">
+<EditForm Model="@AddEditExtendedAttributeModel" OnValidSubmit="SaveAsync" Context="formcontext">
     <FluentValidationValidator @ref="_fluentValidationValidator" />
     <MudDialog>
         <TitleContent>
